[package]
name = "dovahkiin"
version = "0.1.0"
edition = "2024"
description = "FUS RO DAH! A cowsay-like CLI that shouts Skyrim quotes from Alduin"
license = "MIT"
authors = ["Marco Sandoval <marco@example.com>"]
homepage = "https://marcosandoval.dev"
repository = "https://github.com/marcosandoval/dovahkiin"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[profile.release]
strip = true
lto = true
