[package]
name = "dovahkiin"
version = "0.1.0"
edition = "2024"
description = "A cowsay-like CLI that shouts Skyrim quotes from Alduin"
license = "MIT"
authors = ["Marco Sandoval <mrsandvv@gmail.com>"]
homepage = "https://spacehole.tech"
repository = "https://github.com/mrsandv/dovahkiin-say"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[profile.release]
strip = true
lto = true
